remove F# idioms from `gset2graphs` to (hopefully) make it more readable

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -190,11 +190,11 @@ type GraphSet =
 let rec gset2graphs (gs: GraphSet) : seq<MConf * ConfGraph> =
   match gs with
   | GSNone -> Seq.empty
-  | GSFold(conf, n, ren) -> seq{ yield (conf, CGFold(n, ren)) }
-  | GSBuild(conf, xss) ->
-    xss
-    |> Seq.collect (fun xs -> xs |> Seq.map gset2graphs |> Seq.cartesian)
-    |> Seq.map (fun cgs -> (conf, buildGraph (snd conf) cgs))
+  | GSFold(conf, n, ren) -> Seq.singleton (conf, CGFold(n, ren)) 
+  | GSBuild(conf, alts) ->
+      let buildGraph' subGraphs = (conf, buildGraph (snd conf) subGraphs)
+      let buildAlt alt = Seq.map buildGraph' (Seq.cartesian (Seq.map gset2graphs alt))
+      Seq.collect buildAlt alts
 \end{lstlisting}
 \caption{Representation and Expansion of Graph Sets}
 \label{fig:GraphSet}
