--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -1,4 +1,3 @@
-
 \documentclass[submission,copyright,creativecommons]{eptcs}
 \providecommand{\event}{VPT 2020} % Name of the event you are submitting to
 \usepackage{breakurl}             % Not needed if you use pdflatex only.
@@ -406,7 +405,7 @@ type DriveStepResult =
       \item $\mathtt{drive} \llbracket g(f(e'_1, \ldots, e'_m), e_1, \ldots, e_n) \rrbracket =$
         $\mathtt{dsrMap}(\llbracket g(\bullet, e_1, \ldots, e_n) \rrbracket, \mathtt{drive} \llbracket f(e'_1, \ldots, e'_m) \rrbracket)$
         where $\mathtt{dsrMap}$ transforms a driving step result by splicing it in an expression with a hole\footnote{
-        We implement expressions with a signle hole as functions from expressions to expressions.}.
+        We implement expressions with a single hole as functions from expressions to expressions.}.
     \end{itemize}
 \end{itemize}
 We deliberately omit many low-level details in this description, as they are well-known and can be found
