doc: make another contribution explicit

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -88,6 +88,9 @@ We outline the main ideas of multi-result supercompilation --
 as well as the specific approach to its implementation that we use --
 in Sec. \ref{sec:MRSCSummary}. We then describe the main contributions of this study:
 \begin{itemize}
+  \item We propose a method of adapting some existing techniques (MRSC with
+    efficient queries over result sets)
+    to solve in a systematic way the problem of code explosion during supercompilation.
   \item We define a particular strategy for generalization during MRSC (Sec. \ref{sec:Generalize}), which:
     \begin{itemize}
       \item avoids any risk of duplicating code during supercompilation (when applied);
