--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -926,8 +926,8 @@ appears new.
 The current results of the approach -- based on a small set of typical supercompilation examples --
 are encouraging:
 \begin{itemize}
-  \item the smallest configuration graphs we produce are always of small size, comparable
-    to the size of the input, and typically much smaller than the largest results;
+  \item the smallest configuration graphs we produce do not show exponential growth with respect 
+    to the size of the input, and typically are much smaller than the largest results;
   \item often the results of small size (though not necessarily the smallest) also feature a
     significant amount of optimizations, comparable to what a standard classical supercompiler
     can achieve on the same task.
@@ -945,9 +945,9 @@ We have already hinted at some areas for potential improvements of the proposed 
 Clearly the first thing to do, however, is to test the proposed approach on a larger set of
 different examples.
 The current list of analyzed examples is so small, that we consider the current proposal
-rather a work in progress.
-Such an extended set of tests can give more insight on the strengths and weaknesses of the
-proposed technique, and probably suggest other ideas for further study.
+to be work in progress.
+Such an extended set of tests could give more insight on the strengths and weaknesses of the 
+proposed technique, and would likely lead to ideas for further study.
 
 Provided we obtain mostly encouraging results from further testing, the next logical 
 step would be to make the approach more practical:
@@ -959,8 +959,8 @@ step would be to make the approach more practical:
 
 From a more theoretical perspective, it would be interesting to try to formulate properties
 of generalization, which can give some upper bounds on the code size of MRSC results.
-The task is not trivial, because of unfolding, which can replace the current configuration
-with a new one of unrelated size (even if we avoid code duplication at this point).
+Because of unfolding, which can replace the current configuration with a new one of unrelated size (even
+if we avoid code duplication at this point), the task is not trivial.
 On the other hand, at least in the case of our simple object language, we have a fixed
 list of function definitions, which can give us some bound on the configuration size
 after unfolding.
