--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -1,3 +1,4 @@
+\PassOptionsToPackage{hyphens}{url}
 \newif\ifVptVer
 \VptVertrue
 
@@ -14,7 +15,7 @@
 \usepackage{breakurl}             % Not needed if you use pdflatex only.
 \usepackage{underscore}           % Only needed if you use pdflatex.
 
-\usepackage{microtype}
+%\usepackage{microtype}
 
 \usepackage{listings}
 \lstset{
