doc: in short version, replace references to appendices by references to the extended version

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -155,6 +155,15 @@ doi={10.1007/978-3-642-29709-0_19}
 	publisher={University of Pereslavl Publishing House}
 }
 
+@techreport{krustev2020MrscOptSizeReport,
+	title={Optimizing Program Size Using Multi-result Supercompilation (Extended Report)},
+	author={Krustev, Dimitur Nikolaev},
+  year={2020},
+  institution={IGE+XAO Balkan},
+  address={Sofia, Bulgaria},
+  url={https://github.com/dkrustev/MRScpOptSize/tree/master/doc}
+}
+
 @article{Lisitsa2017,
    title={Verification of Programs via Intermediate Interpretation},
    volume={253},
